<resources>
    <string name="Playback_failed">播放失败</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_c">All rights reserved copyright © %d Tenswall</string>
    <string name="about_title">About</string>
    <string name="about_version">Current Version V%s</string>
    <string name="account_delete">Delete account</string>
    <string name="account_password">Password setting</string>
    <string name="add_mem">Add member</string>
    <string name="adduser">Add member</string>
    <string name="alarm_content">Hello, your weighing time is up, remember to weigh on time!</string>
    <string name="alarm_title">Weighing reminder</string>
    <string name="album_name_all">All Media</string>
    <string name="app_name">HY-Fit</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bind_no">You have not bound your HY-FIT APP account, you can:</string>
    <string name="bind_yes">Register a new HY-FIT APP account</string>
    <string name="bind_yes_2">Bind existing HY-FIT APP account</string>
    <string name="ble_not">Bluetooth is not turned on, body fat scale cannot be connected</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="calendar_1">Day</string>
    <string name="calendar_2">One</string>
    <string name="calendar_3">Two</string>
    <string name="calendar_4">Three</string>
    <string name="calendar_5">Four</string>
    <string name="calendar_6">Five</string>
    <string name="calendar_7">Six</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choice_date_title">Date selection</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click">Standing on</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_day">Day</string>
    <string name="common_exit">Press again to exit</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_month">Month</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_setting">Setting</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_title">Prompt</string>
    <string name="common_unit_1">CM</string>
    <string name="common_unit_2_1">Foot</string>
    <string name="common_unit_2_2">Inch</string>
    <string name="common_unit_3">Kg</string>
    <string name="common_unit_4">lb</string>
    <string name="common_unit_5_1">Stone</string>
    <string name="common_unit_5_2">lb</string>
    <string name="common_unit_5_3">Stone:lb</string>
    <string name="common_year">Year</string>
    <string name="community">Community</string>
    <string name="complete">complete</string>
    <string name="complete_birthday">Birthday</string>
    <string name="complete_nick">Nickname</string>
    <string name="enter_no">Enter your order number</string>
    <string name="feedback_send">Send</string>
    <string name="forget_code">Verification Code</string>
    <string name="forget_code_empty">Please enter verification code</string>
    <string name="forget_get_code">Get verification code</string>
    <string name="forget_next">Next step</string>
    <string name="login">Login</string>
    <string name="login_email">Email</string>
    <string name="login_email_hint">Please input your email</string>
    <string name="login_forget_password">Forget password?</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">Please enter the password</string>
    <string name="login_remember_password">Remember password</string>
    <string name="mine_title">Mine</string>
    <string name="modify">modify</string>
    <string name="otherlogin">Other ways to log in</string>
    <string name="pt_vip">Ordinary members</string>
    <string name="regist_account">Register an account</string>
    <string name="set_about">About Us</string>
    <string name="set_account">Account management</string>
    <string name="set_agreement">Privacy and Agreement</string>
    <string name="set_clean">Clear cache with one click</string>
    <string name="set_exit">Sign Out</string>
    <string name="set_feedback">Feedback</string>
    <string name="set_fitbit">Connect Fit Bit</string>
    <string name="set_google">Connect Google Health</string>
    <string name="set_remember">Weighing remind</string>
    <string name="set_switch_language">Switch language</string>
    <string name="set_unit_set">Unit setting</string>
    <string name="target_title">Target weight</string>
    <string name="update">Update</string>
    <string name="vip_success">Your shopping order number order_no has been confirmed. Congratulations on becoming a premium member. The body fat you have purchased is claimed to be free of charge and the product period has been extended to vip_date</string>
    <string name="vip_tip">Enter the purchase order number of the company\'s products you purchased, wait for the background audit after sending, and become a senior member of the company after the audit</string>
    <string name="viptext">Member Upgrade</string>
    <string name="welcome">welcome！</string>
</resources>