<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/f4" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="50dp">
        <TextView android:textSize="18sp" android:textColor="#ff000000" android:gravity="center" android:background="@color/colorWhite" android:paddingTop="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/mine_title"/>
        <RelativeLayout android:id="@+id/mineLayout" android:background="@color/colorWhite" android:paddingLeft="12dp" android:paddingTop="25dp" android:paddingRight="12dp" android:paddingBottom="25dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <p036de.hdodenhof.circleimageview.CircleImageView android:id="@+id/minePic" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_man_b"/>
            <TextView android:textSize="15sp" android:textColor="#ff333333" android:id="@+id/mineName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:text="@string/complete_nick" android:includeFontPadding="false" android:layout_toRightOf="@+id/minePic"/>
            <LinearLayout android:gravity="center_vertical" android:id="@+id/mineVipLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_below="@+id/mineName" android:layout_alignLeft="@+id/mineName">
                <ImageView android:id="@+id/mineVipPic" android:layout_width="14dp" android:layout_height="14dp" android:src="@drawable/ic_vip_f"/>
                <TextView android:textSize="10sp" android:textColor="#ffb0afaf" android:id="@+id/mineVipLevel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/pt_vip" android:includeFontPadding="true"/>
            </LinearLayout>
            <TextView android:textSize="10sp" android:textColor="#ff999999" android:id="@+id/mineTarget" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:layout_marginTop="3dp" android:text="@string/target_title" android:includeFontPadding="false" android:layout_toRightOf="@+id/minePic" android:layout_below="@+id/mineVipLayout"/>
            <ImageView android:id="@+id/mineUpdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_update" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
        </RelativeLayout>
        <TextView android:textSize="15sp" android:textColor="#ff000000" android:background="@color/colorWhite" android:paddingLeft="12dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add_mem"/>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/mineRecyclerview" android:background="@color/colorWhite" android:paddingLeft="12dp" android:paddingTop="14dp" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineVip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:linear_img="@drawable/ic_vip_l" app:linear_text="@string/viptext"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineManage" android:layout_width="match_parent" android:layout_height="wrap_content" app:linear_img="@drawable/ic_manage" app:linear_text="@string/set_account"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineUnit" android:layout_width="match_parent" android:layout_height="wrap_content" app:linear_img="@drawable/ic_unit" app:linear_text="@string/set_unit_set"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineRemind" android:layout_width="match_parent" android:layout_height="wrap_content" app:linear_img="@drawable/ic_weight" app:linear_text="@string/set_remember"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineLanguage" android:layout_width="match_parent" android:layout_height="wrap_content" app:linear_img="@drawable/ic_language" app:linear_text="@string/set_switch_language"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineFeedback" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:linear_content="app@tenswall.com" app:linear_img="@drawable/ic_feedback" app:linear_text="@string/set_feedback"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineYs" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:linear_img="@drawable/ic_ys" app:linear_text="@string/set_agreement"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineAbout" android:layout_width="match_parent" android:layout_height="wrap_content" app:linear_img="@drawable/ic_about" app:linear_text="@string/set_about"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineClear" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" app:linear_img="@drawable/ic_clear" app:linear_text="@string/set_clean"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineFit" android:layout_width="match_parent" android:layout_height="wrap_content" app:linear_img="@drawable/ic_fit" app:linear_text="@string/set_fitbit"/>
        <com.huayu.tzc.customview.MyLinearLayout android:id="@+id/mineGoogle" android:layout_width="match_parent" android:layout_height="wrap_content" app:linear_img="@drawable/ic_google" app:linear_text="@string/set_google"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
