<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="#f2f2f2" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/calendar_1" android:layout_weight="1"/>
            <TextView android:textColor="#666" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/calendar_2" android:layout_weight="1"/>
            <TextView android:textColor="#666" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/calendar_3" android:layout_weight="1"/>
            <TextView android:textColor="#666" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/calendar_4" android:layout_weight="1"/>
            <TextView android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/calendar_5" android:layout_weight="1"/>
            <TextView android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/calendar_6" android:layout_weight="1"/>
            <TextView android:textColor="#666" android:gravity="center" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/calendar_7" android:layout_weight="1"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/recyclerView" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
</FrameLayout>
