<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/colorWhite" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/login_back" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="30dp" android:layout_marginTop="16dp" android:layout_marginRight="30dp" android:src="@drawable/ic_left"/>
        <TextView android:textSize="40sp" android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="50dp" android:layout_marginRight="30dp" android:text="@string/welcome"/>
        <TextView android:textSize="15sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="60dp" android:layout_marginRight="30dp" android:text="@string/login_email"/>
        <com.huayu.tzc.customview.MyEditTextView android:textSize="15sp" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@+id/loginMailEdit" android:background="@drawable/edit_background" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp" android:hint="@string/login_email_hint"/>
        <TextView android:textSize="15sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="15dp" android:layout_marginRight="30dp" android:text="@string/login_password"/>
        <LinearLayout android:gravity="center_vertical" android:background="@drawable/edit_background" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp">
            <com.huayu.tzc.customview.MyEditTextView android:textSize="15sp" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@+id/loginPassEdit" android:background="@color/colorWhite" android:layout_width="0dp" android:layout_height="wrap_content" android:hint="@string/login_password_hint" android:layout_weight="1" android:inputType="textPassword"/>
            <com.huayu.tzc.customview.MyImageView android:id="@+id/loginPassShow" android:layout_width="18dp" android:layout_height="18dp" app:img_false="@drawable/ic_close_eye" app:img_true="@drawable/ic_eye"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:paddingLeft="15dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <com.huayu.tzc.customview.MyImageView android:id="@+id/loginRemember" android:padding="15dp" android:layout_width="40dp" android:layout_height="40dp" app:img_false="@drawable/ic_unselect" app:img_selected="true" app:img_true="@drawable/ic_select"/>
            <TextView android:textSize="12sp" android:textColor="#ff999999" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/login_remember_password" android:layout_weight="1"/>
            <TextView android:textSize="12sp" android:textColor="#ff3a84ff" android:id="@+id/loginForget" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_forget_password"/>
        </LinearLayout>
        <Button android:textSize="20sp" android:textColor="@color/colorWhite" android:id="@+id/loginBt" android:background="@drawable/radius_22" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginLeft="30dp" android:layout_marginTop="35dp" android:layout_marginRight="30dp" android:text="@string/login"/>
        <RelativeLayout android:gravity="center_vertical" android:id="@+id/login_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp">
            <TextView android:textSize="12sp" android:textColor="#ff999999" android:id="@+id/login_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otherlogin" android:layout_centerHorizontal="true" android:layout_centerVertical="true"/>
            <ImageView android:id="@+id/loginFaceBook" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="8dp" android:src="@drawable/ic_facebook" android:layout_toRightOf="@+id/login_text" android:layout_centerVertical="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/login_layout2" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="15sp" android:textColor="#ff3a84ff" android:id="@+id/loginSingUp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/regist_account" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
