<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/colorWhite" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <ImageView android:id="@+id/codeBack" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginLeft="30dp" android:layout_marginTop="16dp" android:layout_marginRight="30dp" android:src="@drawable/ic_left"/>
        <TextView android:textSize="15sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="50dp" android:layout_marginRight="30dp" android:text="@string/login_email"/>
        <com.huayu.tzc.customview.MyEditTextView android:textSize="15sp" android:textColor="#ff000000" android:gravity="center_vertical" android:id="@+id/codeMailEdit" android:background="@drawable/edit_background" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp" android:hint="@string/login_email_hint" android:inputType="text"/>
        <TextView android:textSize="15sp" android:textColor="#ff999999" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="15dp" android:layout_marginRight="30dp" android:text="@string/forget_code"/>
        <LinearLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="45dp" android:layout_marginLeft="30dp" android:layout_marginTop="10dp" android:layout_marginRight="30dp">
            <com.huayu.tzc.customview.MyEditTextView android:textSize="15sp" android:textColor="#ff000000" android:gravity="center" android:id="@+id/codeEdit" android:background="@drawable/edit_background" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="0dp" android:layout_height="40dp" android:hint="@string/forget_code_empty" android:maxLength="6" android:layout_weight="2"/>
            <Button android:textSize="15sp" android:textColor="#ffffffff" android:id="@+id/codeSend" android:background="@drawable/radius_22" android:layout_width="0dp" android:layout_height="40dp" android:layout_marginLeft="10dp" android:text="@string/forget_get_code" android:layout_weight="1"/>
        </LinearLayout>
        <Button android:textSize="20sp" android:textColor="@color/colorWhite" android:id="@+id/codeNext" android:background="@drawable/radius_22" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginLeft="30dp" android:layout_marginTop="35dp" android:layout_marginRight="30dp" android:text="@string/forget_next"/>
    </LinearLayout>
</ScrollView>
