<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/f4" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.huayu.tzc.customview.MyHeaderView android:layout_width="match_parent" android:layout_height="wrap_content" app:header_title="@string/about_title"/>
    <ImageView android:layout_gravity="center" android:layout_width="80dp" android:layout_height="80dp" android:layout_marginTop="100dp" android:src="@drawable/ic_logo"/>
    <TextView android:textSize="20sp" android:textColor="#ff000000" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="@string/app_name"/>
    <TextView android:textSize="12sp" android:textColor="#ff999999" android:layout_gravity="center" android:id="@+id/aboutVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6dp"/>
    <Button android:textSize="15sp" android:textColor="@color/color_white" android:layout_gravity="center" android:id="@+id/aboutUpdate" android:background="@drawable/radius_6_blue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="25dp" android:layout_marginRight="30dp" android:text="@string/update"/>
</LinearLayout>
